--- a/sandbox/build.gradle
+++ b/sandbox/build.gradle
@@ -2,4 +2,11 @@ apply plugin: 'java'
 apply plugin: 'application'
 mainClassName = "MyFirstProgram"
 
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    implementation 'com.buschmais.jqassistant.plugin:testng:1.7.0-MS1'
+}
 
