--- a/sandbox/build.gradle
+++ b/sandbox/build.gradle
@@ -3,7 +3,11 @@ apply plugin: 'application'
 mainClassName = "MyFirstProgram"
 
 repositories {
+    jcenter()
     mavenCentral()
+    maven {
+        url "https://plugins.gradle.org/m2/"
+    }
 }
 
 dependencies {
